--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,30 @@
+.custom-file-input {
+    cursor: pointer;
+}
+
+.custom-file-input:hover {
+    background-color: #f8e473; /* Tom mais claro de amarelo ao passar o mouse */
+}
+
+.custom-file-label {
+    background-color: #ffd700; /* Amarelo principal */
+    border-color: #ffd700;
+    color: #000; /* Preto para contraste */
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.custom-file-input:focus + .custom-file-label {
+    box-shadow: 0 0 5px #ffd700; /* Sombra amarela ao focar */
+}
+
+.custom-file-label:hover {
+    background-color: #ffc107; /* Amarelo mais intenso ao passar o mouse */
+    border-color: #ffc107;
+}
+
+
+
 .custom-yellow-btn {
     background-color: yellow;
     color: black;
